--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,36 @@ GTAGS
 arch/arm/boot/compressed/lib1funcs.S
 arch/arm/boot/compressed/piggy.gzip
 arch/arm/boot/compressed/vmlinux
+
+arch/arm/boot/Image
+arch/arm/boot/compressed/vmlinux.lds
+arch/arm/boot/zImage
+arch/arm/kernel/vmlinux.lds
+drivers/tty/vt/consolemap_deftbl.c
+drivers/tty/vt/defkeymap.c
+firmware/epen/W8501.bin.gen.S
+firmware/epen/W8501_P48.bin.gen.S
+firmware/tsp_atmel/mXT1664S.fw
+firmware/tsp_atmel/mXT1664S.fw.gen.S
+kernel/timeconst.h
+lib/crc32table.h
+lib/gen_crc32table
+scripts/basic/fixdep
+scripts/conmakehash
+scripts/genksyms/genksyms
+scripts/genksyms/keywords.c
+scripts/genksyms/lex.c
+scripts/genksyms/parse.c
+scripts/genksyms/parse.h
+scripts/kallsyms
+scripts/kconfig/conf
+scripts/kconfig/lex.zconf.c
+scripts/kconfig/zconf.hash.c
+scripts/kconfig/zconf.tab.c
+scripts/mod/elfconfig.h
+scripts/mod/mk_elfconfig
+scripts/mod/modpost
+scripts/recordmcount
+usr/gen_init_cpio
+usr/initramfs_data.cpio
+
